<resources>
    <string name="app_name">Calculator</string>
    <string name="place_holder_num">0</string>
    <string name="btn0">0</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btnSqr">\u221A</string>
    <string name="btnClear">C</string>
    <string name="btnDivide">\u00F7</string>
    <string name="btnPercent">%</string>
    <string name="btnMultiply">\u00D7</string>
    <string name="btnSubtract">-</string>
    <string name="btnSign">\u00B1</string>
    <string name="btnDecimal">.</string>
    <string name="btnAdd">+</string>
    <string name="btnEquals">=</string>
</resources>